Fix DCHECK failure when ChromeActivity#onPauseWithNative() is called many times quickly

ChromeActivity#onPauseWithNative() is called several as a result of calling
WebappDelegateFactory#activateContents() for a WebAPK.

The problem is with TabContentManager::CacheTab(). If
TabContentManager::CacheTab() is called while a readback for the tab is
pending, ThumbnailCache::Remove() is called.

ThumbnailCache::Remove() removes the entry for |tab_id| from
|ThumbnailCache::thumbnail_meta_data_|. When the readback completes, the
callback (TabContentManager::PutThumbnailIntoCache()) fails because
|ThumbnailCache::thumbnail_meta_data_| does not contain an entry for |tab_id|.

BUG=665096

Review-Url: https://codereview.chromium.org/2497383002
Cr-Commit-Position: refs/heads/master@{#432352}

Former-commit-id: e299953842a5913ea92cfeb6f0079acfb22ea407